--- a/src/Expenses.css
+++ b/src/Expenses.css
@@ -10,6 +10,11 @@ img {
     -webkit-user-select: none;
     -ms-user-select: none;
 }
+
+label:hover{
+    cursor:pointer;
+}
+
 .jumbotron {
     padding: 1em;
     margin: 0.1em;
