--- a/src/Expenses.css
+++ b/src/Expenses.css
@@ -10,6 +10,18 @@ img {
     -webkit-user-select: none;
     -ms-user-select: none;
 }
+
+.scrollList {
+    height:100vh;
+    width:100%;
+    overflow-y: auto;
+}
+
+.FAB {
+  top: 100px;
+  margin-left: 50px;
+}
+
 .centerVerticalLeft {
   display:table;
   margin:auto auto;
