--- a/src/Expenses.css
+++ b/src/Expenses.css
@@ -65,7 +65,11 @@ label:hover{
 
 .jumbotron {
     padding: 1em;
-    margin: 0.1em;
+    padding-left: 4.75em;
+    padding-right: 3.25em;
+    margin: auto;
+    margin-bottom: 0.2em;
+    max-width: 60em;
 }
 
 .extraPad {
