--- a/src/Expenses.css
+++ b/src/Expenses.css
@@ -42,6 +42,10 @@
    outline: none !important; 
 }
 
+.leftAlignText {
+  text-align: left;
+}
+
 .centerVerticalLeft {
   display:table;
   margin:auto auto;
@@ -66,6 +70,9 @@ label:hover{
 .jumbotron {
     padding: 1em;
     margin: 0.1em;
+    max-width: 60em;
+    margin:auto;
+    margin-bottom: 0.2em;
 }
 
 .extraPad {
