Fix jumbotron css

--- a/src/Expenses/index.css
+++ b/src/Expenses/index.css
@@ -67,7 +67,7 @@ label:hover{
     cursor:pointer;
 }
 
-.jumbotron {
+.jumbotron-card {
     padding: 1em;
     padding-left: 4.75em;
     padding-right: 3.25em;
